<resources>
    <string name="app_name">Vortex 21</string>
    <string name="vortex">Vortex</string>
    <string name="techie_tuesday">Techie Tuesday</string>

    <string name="full_name">Full Name</string>
    <string name="full_name_error_description">Full Name</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_error_description">Password</string>

    <string name="vortex_username">Vortex Username</string>
    <string name="vortex_username_error_description">Vortex Username</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_error_description">Mobile Number</string>

    <string name="email">Email</string>
    <string name="email_error_description">Email</string>
    <string name="register_email_helper_text">Students of NIT Trichy are advised to use official college email</string>

    <string name="year_of_study">Year of Study</string>
    <string name="year_of_study_error_description">Year of Study</string>

    <string name="full_college_name">Full College Name</string>
    <string name="college_error_description">College</string>

    <string name="stay_tuned_for_update">Keep checking back for exciting and engaging events with attractive prizes!</string>

    <string name="username">username</string>
    <string name="score">Score</string>
    <string name="rank">Rank</string>

    <string name="department">Department</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="show_details">Show Details</string>

    <string name="need_login">Need Login</string>
    <string name="logout">Logout</string>
    <string name="verify_email">Verify Email</string>
    <string name="home">Home</string>

    <string name="workshops">Workshops</string>
    <string name="workshop_from">Workshop From</string>
    <string name="workshop_to">Workshop To</string>
    <string name="workshop_name">Workshop Name</string>
    <string name="workshop_cost">Workshop Cost</string>

    <string name="leaderboard">Leaderboard</string>
    <string name="navigate_next">Navigate Next</string>
    <string name="navigate_before">Navigate Before</string>
    <string name="current_page">Current Page</string>
    <string name="first_page">First Page</string>
    <string name="last_page">Last Page</string>
    <string name="number_1">1</string>

    <string name="events">Events</string>
    <string name="event_name">Event Name</string>
    <string name="event_from">Event From</string>
    <string name="event_to">Event To</string>
    <string name="event_cost">Event Cost</string>

    <string name="social_media">Social Media</string>
    <string name="more">More</string>
    <string name="t_shirt_registration">T-shirt Registration</string>
    <string name="new_update_available">New Update Available</string>
    <string name="update_to_the_new_app_to_have_a_seamless_experience">Update to the new app to have a seamless experience.</string>
    <string name="cancel">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>

    <string name="linked">Linked</string>
    <string name="progress">Progress</string>
    <string name="Continue">Continue</string>

    <string name="play">Play</string>


    <string name="rules"><b><u>RULES:</u></b>\n\u25CF Submit the correct answer to proceed to the next level.\n\u25CF Players will be ranked based on points they score.\n\u25CF Points are calculated as follows :\n  \u25CB Solving a question in level 1 awards the player with 10 points.\n  \u25CB Solving a question in levels 2 and 3 awards the player with 20 points.\n  \u25CB Solving a question in levels 4 and 5 awards the player with 30 points.\n  \u25CB For each question an additional hint will be given, if any player takes the help of the additional hint to solve the question, then that player will be awarded with only half of the points.\n\n <b><u>SUBMISSION INSTUCTIONS:</u></b>\n\u25CF All the words in an answer must be in lowercase and separated by a space.\n\u25CF If the answer is a group of words(strings), then enter the answer as "<b>word1 word2 word3</b>" i.e. each string separated by a space. Ex: “<b>programming language</b>”\n\u25CF If the answer contains a group of words and any number of separate real values, enter the answer as "<b>word integer</b>". Ex: “<b>ubuntu 19.04</b>”\n\u25CF If the answer is an integer or real number then enter the answer simply as “1234” or “123.45”\n\n<b><u>ALL THE BEST!</u></b></string>

    <string name="round_number">Level %1$d</string>
    <string name="confirm_hint_title">Are you sure you want to use the additional hint?</string>
    <string name="confirm_hint_body">You will be awarded with only half of the points upon solving.</string>
    <string name="correct_answer">Correct answer, %1$d marks awarded!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="submit">submit</string>
    <string name="additional_hint">additional hint</string>
    <string name="answer_hint">Answer</string>
    <string name="looks_like_you_have_not_registered">Looks like you have not registered</string>
    <string name="progress_crown">Progress Crown</string>
    <string name="start_playing">Start Playing</string>
    <string name="reload">Reload</string>
    <string name="refresh">Refresh</string>

</resources>