<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentWorkshops">

    <fragment
        android:id="@+id/fragmentWorkshops"
        android:name="edu.nitt.vortex21.fragments.WorkshopsFragment"
        android:label="@string/workshops"
        tools:layout="@layout/fragment_workshops" />

    <fragment
        android:id="@+id/fragmentEvents"
        android:name="edu.nitt.vortex21.fragments.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/fragmentSocialMedia"
        android:name="edu.nitt.vortex21.fragments.SocialMediaFragment"
        android:label="@string/social_media"
        tools:layout="@layout/fragment_social_media" />

    <fragment
        android:id="@+id/fragmentTShirtRegistration"
        android:name="edu.nitt.vortex21.fragments.TShirtRegistrationFragment"
        android:label="@string/t_shirt"
        tools:layout="@layout/fragment_tshirt" />

</navigation>