<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/workshopLogo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/linked" />

        <TextView
            android:id="@+id/workshopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="start"
            android:text="@string/workshop_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/workshopFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/workshop_from"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/workshopTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/workshop_to"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/workshopCost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="2"
                android:text="@string/workshop_cost"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textAllCaps="false"
                app:icon="@drawable/register" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderBoardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/show_details"
                android:textAllCaps="false"
                app:icon="@drawable/magnify_glass" />

        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/show_details"
            android:visibility="gone" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
