<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="edu.nitt.vortex2021.fragments.LeaderboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:gravity="center"
            android:text="@string/leaderboard"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/refresh"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_refresh_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboardList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:layoutAnimation="@anim/layout_animation_horizontal_fall_down"
        tools:listitem="@layout/list_item_leaderboard" />


    <LinearLayout
        android:id="@+id/paginationButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/firstPageFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/leaderboard_pagination_fab_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/first_page"
            android:src="@drawable/ic_baseline_first_page_24"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/naviateBeforeFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/leaderboard_pagination_fab_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/navigate_before"
            android:src="@drawable/ic_baseline_navigate_before_24"
            app:fabSize="normal" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/currentPageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/leaderboard_pagination_fab_margin"
                android:clickable="false"
                android:contentDescription="@string/navigate_before"
                android:text="@string/number_1"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/navigateNextFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/leaderboard_pagination_fab_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/navigate_next"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:fabSize="normal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/lastPageFab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/leaderboard_pagination_fab_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/last_page"
            android:src="@drawable/ic_baseline_last_page_24"
            app:fabSize="mini" />
    </LinearLayout>
</LinearLayout>