<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:animateLayoutChanges="true"
    android:backgroundTint="@color/colorOnGradient"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/rank"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/vortex_username"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:shadowColor="@color/colorAccent"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="5"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/collegeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/full_college_name"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
