<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/background_gradient"
    tools:context="edu.nitt.vortex2021.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalCenterGuideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerName"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/containerUsername"
            app:startIconDrawable="@drawable/person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerUsername"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vortex_username"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/containerPassword"
            app:startIconDrawable="@drawable/person">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerPassword"
            style="@style/TextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/containerUsername"
            app:startIconDrawable="@drawable/password_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerConfirmPassword"
            style="@style/TextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/containerPassword"
            app:startIconDrawable="@drawable/password_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerNumber"
            style="@style/TextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/containerConfirmPassword"
            app:startIconDrawable="@drawable/number_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerEmail"
            style="@style/TextInputLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:helperText="@string/register_email_helper_text"
            app:layout_constraintTop_toBottomOf="@id/containerNumber"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerCollege"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_college_name"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/containerEmail"
            app:startIconDrawable="@drawable/college">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/containerDepartment"
            style="@style/TextInputLayout.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/department"
            android:labelFor="@id/autocompleteTextDepartment"
            app:endIconMode="dropdown_menu"
            app:layout_constraintTop_toBottomOf="@id/containerCollege">

            <AutoCompleteTextView
                android:id="@+id/autocompleteTextDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:label="@id/containerDepartment" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@id/verticalCenterGuideline"
            app:layout_constraintStart_toEndOf="@id/verticalCenterGuideline"
            app:layout_constraintTop_toBottomOf="@id/containerDepartment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

